[workspace]
members = ["programs/*", "cli", "market_making", "commons"]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-client = "0.29.0"
clap = "4.3.3"
anyhow = "1.0.71"
shellexpand = "3.1.0"
rust_decimal = "1.31.0"
rand = "0.8.5"
tokio = "1.20.0"
serde_json = "1.0.48"
serde = "1.0.104"
solana-transaction-status = "=1.17.3"
spl-associated-token-account = "2.2.0"
spl-transfer-hook-interface = "0.3.0"
env_logger = "0.9.0"
log = "0.4.17"
bs58 = "0.5.0"
hyper = "0.14.17"
routerify = "3"
bincode = "1.3.3"
commons = { path = "./commons" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
