[workspace]
members = ["cli", "market_making", "commons", "dlmm_interface"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-client = "0.28.0"

solana-sdk = "1.16.0"
spl-associated-token-account = "1"
solana-transaction-status = "1.16.0"

serde_json = "1.0.48"
serde = "1.0.104"
bincode = "1.3.3"
bs58 = "0.5.0"

clap = "4.3.3"
shellexpand = "3.1.0"

env_logger = "0.9.0"
log = "0.4.17"

rust_decimal = "1.31.0"
ruint = "1.3.0"
num-integer = "0.1.45"
num-traits = "0.2.16"

hyper = "0.14.17"
routerify = "3"

tokio = "~1.14.1"

anyhow = "1.0.71"

rand = "0.8.5"

chrono = "0.4.31"

ureq = "2.0.0"

commons = { path = "./commons" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
