[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "cli"
authors = ["tian <tian@racoons.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
anchor-client = { workspace = true, features=["async"] }
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
shellexpand.workspace = true
rust_decimal = { version = "1.31.0", features = ["maths"] }
lb_clmm =  { path = "../programs/lb_clmm", features = ["cpi"] }
spl-associated-token-account.workspace = true
mpl-token-metadata.workspace = true
rand = "0.8.5"
tokio = { workspace = true, features = ["full", "parking_lot"] }

[dev-dependencies]
proptest.workspace = true