[package]
name = "commons"
version = "0.3.0"
edition = "2021"
description = "Common libraries for DLMM"
authors = ["tian <tian@racoons.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = { workspace = true, features = ["async"] }
anyhow = { workspace = true }
dlmm_interface = { path = "../dlmm_interface" }
tokio = { workspace = true, features = ["full", "parking_lot"] }
bincode = { workspace = true }
solana-sdk = { workspace = true }
ruint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }

[dev-dependencies]
anchor-spl = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-program-test = "1.16.0"
assert_matches = "1.5.0"
solana-program = "1.16.0"
