[package]
name = "dlmm-sdk"
version = "0.0.1"
edition = "2021"
description = "SDK for DLMM program"
authors = ["Tian <tian@raccoons.dev>"]
repository = "https://github.com/MeteoraAg/dlmm-sdk"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "clmm"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = { git = "https://github.com/jup-ag/anchor-gen.git", rev = "dae4c216b883ea089432ff5c00d100f4f662fd07" }
anchor-lang = ">=0.26.0"
solana-program = ">=1.13"