[package]
name = "dlmm_interface"
version = "0.9.0"
edition = "2021"

[features]
staging = []

[dependencies.borsh]
version = "^1.5"

[dependencies.bytemuck]
features = ["derive", "min_const_generics"]
version = "^1.16"

[dependencies.num-derive]
version = "0.4.2"

[dependencies.num-traits]
version = "^0.2"

[dependencies.serde]
optional = true
version = "^1.0"

[dependencies.solana-program]
version = "^1.16"

[dependencies.thiserror]
version = "^1.0"
