[package]
name = "market_making"
version = "0.0.1"
description = "Market making bot"
edition = "2021"
authors = ["andrew <andrew@racoons.dev>"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
hyper = { version = "0.14.17", features = ["full"] }
routerify = "3"
ureq = { version = "2.0.0", features = ["json"]}
anchor-client = { workspace = true, features=["async"] }
anchor-spl="0.28.0"
anchor-lang.workspace = true
env_logger="0.9.0"
log="0.4.17"
clap = { workspace = true, features = ["derive"] }
shellexpand.workspace = true
anyhow.workspace = true
lb_clmm =  { path = "../programs/lb_clmm", features = ["cpi"] }
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
spl-associated-token-account.workspace = true 
solana-transaction-status="1.16.12"
bs58 = "0.5.0"
chrono="0.4.31"

