[package]
name = "dlmm-program-interface"
version = "0.0.1"
edition = "2021"
description = "Interface for DLMM program"
authors = ["Tian <tian@raccoons.dev>"]
repository = "https://github.com/MeteoraAg/dlmm-sdk"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "clmm"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.28.0", features = ["event-cpi"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
anchor-spl = "0.28.0"
