[package]
name = "lb_clmm"
version = "0.9.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lb_clmm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []
alpha-access = []
test-bpf = []
staging = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
anchor-spl = { version = "0.29.0", features = ["memo"] }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
ruint = "1.3.0"
num-traits = "0.2.16"
num-integer = "0.1.45"
solana-program = "=1.17.3"
num_enum = "0.7.1"
spl-transfer-hook-interface = "0.3.0"
